--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navbar">
         <a  id="home" href="index.html">Home</a>
-        <a id="contect" href="contact.html">Contect Us</a>
+        <a id="contect" href="contact.html">Contact List</a>
         <a id="fav" href="favourites.html">Favourites</a>
     </div>
 
